/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.0/userguide/java_library_plugin.html
 */

plugins {
    // Apply the java-library plugin to add support for Java Library
    id 'java-library'
    id 'org.jetbrains.kotlin.jvm'
}

jar {
    manifest {
        attributes 'Implementation-Title': 'jaku-',
                   'Implementation-Version': '1.7'
    }
}

java {
    withSourcesJar()
    withJavadocJar()
    // and/or analogously use “withJavadocJar()” to get a “javadocJar” task
}

kotlin {
    jvmToolchain {
        languageVersion.set(JavaLanguageVersion.of(11))
    }
}

repositories {
    // Use jcenter for resolving dependencies.
    // You can declare any Maven/Ivy/file repository here.
    mavenCentral()
}

dependencies {
    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    implementation 'org.jdom:jdom2:2.0.6.1'
    implementation 'com.squareup.okhttp3:okhttp:4.11.0'

    // Use JUnit test framework
    testImplementation 'junit:junit:4.13.1'
    testImplementation 'org.mockito:mockito-all:1.8.4'
    testImplementation 'junit:junit:4.13.1'
}
